--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ osx_image: xcode11.3
 language: swift
 xcode_project: travis-ci-integration.xcodeproj
 xcode_scheme: travis-ci-integration
+xcode_test_scheme: travis-ci-integration-test
 xcode_sdk: iphonesimulator8.4
 xcode_destination: platform=iOS Simulator,OS=13.2,name=iPhone X
 before_install: cd travis-ci-integration
@@ -11,9 +12,9 @@ before_install: cd travis-ci-integration
 jobs:
   include:
     - stage: build
-      script: xcodebuild -project travis-ci-integration.xcodeproj -target travis-ci-integration -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+      script: xcodebuild -project xcode_project -target xcode_scheme -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
     - stage: test
-      script: xcodebuild -project travis-ci-integration.xcodeproj -target travis-ci-integration -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+      script: xcodebuild -project xcode_project -target xcode_test_scheme -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 #  - # stage name not required, will continue to use `test`
 #    script: ./test 2
 #  - stage: deploy
