--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
     - stage: build
       script: xcodebuild -project travis-ci-integration.xcodeproj -target travis-ci-integration -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
     - stage: test
-      script: xcodebuild -project travis-ci-integration.xcodeproj -target {xcode_test_scheme} -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+      script: xcodebuild -project travis-ci-integration.xcodeproj -target travis-ci-integration-test -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 #  - # stage name not required, will continue to use `test`
 #    script: ./test 2
 #  - stage: deploy
