--- a/travis-ci-integration/travis-ci-integration.xcodeproj/xcshareddata/xcschemes/travis-ci-integration-test.xcscheme
+++ b/travis-ci-integration/travis-ci-integration.xcodeproj/xcshareddata/xcschemes/travis-ci-integration-test.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F80501E624714382008DCE06"
+               BuildableName = "travis-ci-integrationTests.xctest"
+               BlueprintName = "travis-ci-integrationTests"
+               ReferencedContainer = "container:travis-ci-integration.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
