--- a/travis-ci-integration/travis-ci-integration.xcodeproj/xcshareddata/xcschemes/travis-ci-integration-test.xcscheme
+++ b/travis-ci-integration/travis-ci-integration.xcodeproj/xcshareddata/xcschemes/travis-ci-integration-test.xcscheme
@@ -50,6 +50,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "F80501D024714381008DCE06"
+            BuildableName = "travis-ci-integration.app"
+            BlueprintName = "travis-ci-integration"
+            ReferencedContainer = "container:travis-ci-integration.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,6 +67,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "F80501D024714381008DCE06"
+            BuildableName = "travis-ci-integration.app"
+            BlueprintName = "travis-ci-integration"
+            ReferencedContainer = "container:travis-ci-integration.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
