--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ jobs:
       script: xcodebuild -project travis-ci-integration.xcodeproj -target travis-ci-integration -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
     - stage: test
       script: xcodebuild clean build test -workspace travis-ci-integration.xcworkspace -scheme "travis-ci-integration-test" -destination "platform=iOS Simulator,OS=13.3,name=iPhone 11 Pro"
+      script: plutil -extract CLIENT_ID xml1 -o -travis-ci-integration/GoogleService-Info.plist
 #  - # stage name not required, will continue to use `test`
 #    script: ./test 2
 #  - stage: deploy
 #    script: ./deploy
-# OS:13.3, name:iPhone 11 Pro
+# OS:13.3, name:iPhone 11 Pro       script: plutil -extract CLIENT_ID xml1 -o -travis-ci-integration/GoogleService-Info.plist
+
